--- a/app/app/views/home/index.html.erb
+++ b/app/app/views/home/index.html.erb
@@ -1,23 +1,4 @@
-<h1 class="text-center text-primary">Bienvenue sur le tournois Probesys 🏆</h1>
+<h1 class="text-center text-primary">Welcome to the Probesys tournament 🏆</h1>
 
-<h2 class="mt-3">Les équipes</h2>
-
-<div class="list-team">
-    <div class="row">
-        <% @teams.each do |team| %>
-        <div class="col-md-4">
-            <div class="card mb-3">
-            <div class="card-body">
-                <h5 class="card-title"><%= team.name %></h5>
-                <p class="card-text">Membres :</p>
-                <ul>
-                <% team.players.each do |player| %>
-                    <li><%= player.name %> - <%= player.position %></li>
-                <% end %>
-                </ul>
-            </div>
-            </div>
-        </div>
-        <% end %>
-    </div>
-</div>
+<h2 class="mt-3"></h2>
+ 
