--- a/app/app/views/players/new.html.erb
+++ b/app/app/views/players/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Player</h1>
 
 <%= render "form" , player: @player %>
-<%= debug @player %>
+<%# debug @player %>
 <%= link_to "Back", players_path %>
