--- a/app/app/views/home/index.html.erb
+++ b/app/app/views/home/index.html.erb
@@ -1,4 +1,10 @@
-<h1 class="text-center text-primary">Welcome to the Probesys tournament 🏆</h1>
-
-<h2 class="mt-3"></h2>
- 
+<div class="container">
+    <h1 class="text-center text-primary">Welcome to the Probesys tournament 🏆</h1>
+    <hr>
+    <div class="mb-4 mt-3">
+    <h2 class="text-center text-secondary">Create your tournaments and manage your players</h2>
+    </div>
+    <div class="justify-content-center text-center">
+    <%= link_to "New tournament", tournaments_path, class: "btn btn-info rounded-3 shadow-sm mt-5" %>
+    </div>
+</div>
