--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -25,6 +25,20 @@
   </head>
 
   <body>
+    <% flash.each do |type, message| %>
+        <% bootstrap_class = case type.to_sym
+              when :notice then "alert-success"
+              when :alert then "alert-danger"
+              when :error then "alert-danger"
+              when :warning then "alert-warning"
+              else "alert-info"
+            end %>
+
+        <div class="alert <%= bootstrap_class %> alert-dismissible fade show" role="alert">
+          <%= message %>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+      <% end %>
     <%= yield %>
   </body>
 </html>
