--- a/app/app/views/tournaments/index.html.erb
+++ b/app/app/views/tournaments/index.html.erb
@@ -1,1 +1,62 @@
-<h1>Tournaments</h1>
+<div class="container">
+    <%= link_to "Back to home", "/" , class: "btn btn-sm btn-secondary" %>
+    <h1 class="text-center">Tournaments</h1>
+    <hr>
+    <div class="justify-content-center text-center mb-5 col-3">
+        <%= link_to "Create tournament", new_tournament_path, class: "btn btn-success rounded-3 shadow-sm mt-5" %>
+    </div>
+
+
+    <div id="tournaments" col-lg-10 center">
+    <div class="row">
+        <div class="justify-content-center text-center mb-5 col-4">
+            <%= link_to "See matches", matches_path, class: "btn btn-primary rounded-3 shadow-sm mt-5" %>
+        </div>  
+        <div class="justify-content-center text-center mb-5 col-4">
+            <%= link_to "See players", players_path, class: "btn btn-warning rounded-3 shadow-sm mt-5" %>
+        </div>
+        <div class="justify-content-center text-center mb-5 col-4">
+            <%= link_to "See teams", teams_path, class: "btn btn-primary rounded-3 shadow-sm mt-5" %>
+        </div>
+    </div>
+
+        <% if @tournaments.present? %>
+        
+        <% @tournaments.each do |tournament| %>
+            <div class="row">
+            <div class="col-6 mb-2 text-success mt-5">
+            Tournament's name : <%= tournament.name %> 
+            </div>
+            <div class="col-6 mb-2 mt-5">
+
+                <% classement = @classements[tournament.id] %>
+                <% if classement.present? && classement.first[0].present? %>
+                    🏆 Winner: <%= classement.first[0].name %><br/>
+                <% else %>
+                    🏆 Winner: Not decided yet
+                <% end %>
+                    📅 Start date:  <%= tournament.start_date %> <br/>
+                    📅 End date : <%= tournament.end_date %>
+
+            </div>
+            <hr>
+            </div>
+        <% end %>
+        <% else %>
+            <div class="row">
+                <div class="col-12 mb-2 mt-5">
+                    No tournaments found.
+                </div>
+            </div>
+        <% end %>
+    </div>
+</div>
+
+
+    
+</div>
+
+
+
+
+
