--- a/app/app/views/tournaments/new.html.erb
+++ b/app/app/views/tournaments/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Tournament</h1>
+<div class="container">
+    <%= link_to "Back", "/" , class: "btn btn-sm btn-secondary" %>
+        <h1 class="text-center">Tournament</h1>
+    <hr>
+    <div class="mx-auto justify-content-center text-center col-lg-8 col-md-6">
+            <%= render "form" , tournament: @tournament %>
+    </div>
+</div>
 
