--- a/app/app/views/teams/show.html.erb
+++ b/app/app/views/teams/show.html.erb
@@ -10,5 +10,5 @@
 </p>
 
 
-<%= link_to "Back", teams_path %>
-<%= link_to "Edit", edit_team_path(@team) %>
+<%= link_to "Back", teams_path, class: "btn btn-sm btn-secondary" %>
+<%= link_to "Edit", edit_team_path(@team), class: "btn btn-sm btn-warning" %>
